# PIC_Website

./: .gitignore  Cargo.toml  build.sh  index.html  missionpatch.xcf  package-lock.json  package.json  tailwind.config.js  wrangler.jsonc
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/components/: footer.rs  navbar.rs
src/pages/: equipa.rs  home.rs  mod.rs  problema.rs  solucao.rs  viabilidade.rs
style/: input.css
