[package]
name = "missao-hades-site"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", default-features = false, features = ["csr"] }
leptos_router = "0.7"
console_log = "1"
console_error_panic_hook = "0.1"
log = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
